add JSON combiner functions and set up Claude vision capabilities

--- a/LLM_IG.ipynb
+++ b/LLM_IG.ipynb
@@ -52,20 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/amathur/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n",
-      "/Users/amathur/Library/Python/3.9/lib/python/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import google.generativeai as gemini\n",
@@ -97,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These files categories match the files that we had identified to keep. Now we need to identify narrative files and use that content to provide context to the LLMs."
+    "These files categories match the files that we had identified to keep. "
    ]
   },
   {
@@ -378,14 +367,136 @@
    "source": [
     "## Preparing files\n",
     "\n",
-    "In this step, we're preparing our loaded files by combining files."
+    "In this step, we're preparing our loaded files by combining JSONs in each directory into a singular JSON, structured with top level items: \"resource_Type\", \"total\", and \"entry\"."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine_json_files(folder_path):\n",
+    "    \"\"\"\n",
+    "    Combines all JSON files in a folder into a single array of JSON objects.\n",
+    "    \n",
+    "    Args:\n",
+    "        folder_path (str): Path to the folder containing JSON files\n",
+    "        \n",
+    "    Returns:\n",
+    "        list: List of JSON objects from all files\n",
+    "    \"\"\"\n",
+    "    combined_json = []\n",
+    "    \n",
+    "    # Iterate through all files in the folder\n",
+    "    for filename in os.listdir(folder_path):\n",
+    "        if filename.endswith('.json'):\n",
+    "            file_path = os.path.join(folder_path, filename)\n",
+    "            try:\n",
+    "                with open(file_path, 'r') as file:\n",
+    "                    json_content = json.load(file)\n",
+    "                    combined_json.append(json_content)\n",
+    "            except json.JSONDecodeError as e:\n",
+    "                print(f\"Error decoding JSON from {filename}: {e}\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error processing {filename}: {e}\")\n",
+    "                \n",
+    "    return combined_json\n",
+    "\n",
+    "def create_consolidated_jsons(base_directory='package/json_only'):\n",
+    "    \"\"\"\n",
+    "    Creates consolidated JSON files for each subdirectory.\n",
+    "    \n",
+    "    Args:\n",
+    "        base_directory (str): Base directory containing the categorized folders\n",
+    "    \"\"\"\n",
+    "    # Get all subdirectories\n",
+    "    subdirs = [d for d in os.listdir(base_directory) \n",
+    "              if os.path.isdir(os.path.join(base_directory, d))]\n",
+    "    \n",
+    "    # Process each subdirectory\n",
+    "    for subdir in subdirs:\n",
+    "        folder_path = os.path.join(base_directory, subdir)\n",
+    "        print(f\"Processing {subdir}...\")\n",
+    "        \n",
+    "        # Combine all JSON files in this folder\n",
+    "        combined_data = combine_json_files(folder_path)\n",
+    "        \n",
+    "        if combined_data:\n",
+    "            # Create output filename\n",
+    "            output_filename = f\"{subdir}_combined.json\"\n",
+    "            output_path = os.path.join(base_directory, output_filename)\n",
+    "            \n",
+    "            # Write the combined JSON to a file\n",
+    "            try:\n",
+    "                with open(output_path, 'w') as outfile:\n",
+    "                    json.dump({\n",
+    "                        \"resourceType\": subdir,\n",
+    "                        \"total\": len(combined_data),\n",
+    "                        \"entry\": combined_data\n",
+    "                    }, outfile, indent=2)\n",
+    "                print(f\"Created {output_filename} with {len(combined_data)} entries\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error writing {output_filename}: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing StructureDefinition...\n",
+      "Created StructureDefinition_combined.json with 63 entries\n",
+      "Processing CapabilityStatement...\n",
+      "Created CapabilityStatement_combined.json with 2 entries\n",
+      "Processing CodeSystem...\n",
+      "Created CodeSystem_combined.json with 5 entries\n",
+      "Processing ValueSet...\n",
+      "Created ValueSet_combined.json with 29 entries\n",
+      "Processing SearchParameter...\n",
+      "Created SearchParameter_combined.json with 110 entries\n",
+      "Processing ImplementationGuide...\n",
+      "Created ImplementationGuide_combined.json with 1 entries\n",
+      "Processing OperationDefinition...\n",
+      "Created OperationDefinition_combined.json with 1 entries\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the consolidated JSON files\n",
+    "create_consolidated_jsons()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To do: need to better clean combined text"
+    "Now we need to identify narrative files and use that content to provide context to the LLMs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Archived functions/code to combine txt files"
    ]
   },
   {
@@ -394,24 +505,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#function to combine all text files\n",
     "\n",
-    "def combine_txt_files(directory_path):\n",
-    "    \"\"\"Combines all .txt files in the specified directory into a single string.\"\"\"\n",
-    "    combined_text = []\n",
-    "    #iterate through txt files in directory\n",
-    "    for filename in os.listdir(directory_path):\n",
-    "        if filename.endswith('.txt'):\n",
-    "            file_path = os.path.join(directory_path, filename)\n",
-    "            try:\n",
-    "                with open(file_path, 'r', encoding='utf-8') as file:\n",
-    "                    content = file.read()\n",
-    "                    #append text from txt file to combined_text\n",
-    "                    combined_text.append(content)\n",
-    "            except Exception as e:\n",
-    "                print(f\"Error reading {filename}: {e}\")\n",
+    "# def combine_txt_files(directory_path):\n",
+    "#     \"\"\"Combines all .txt files in the specified directory into a single string.\"\"\"\n",
+    "#     combined_text = []\n",
+    "#     #iterate through txt files in directory\n",
+    "#     for filename in os.listdir(directory_path):\n",
+    "#         if filename.endswith('.txt'):\n",
+    "#             file_path = os.path.join(directory_path, filename)\n",
+    "#             try:\n",
+    "#                 with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "#                     content = file.read()\n",
+    "#                     #append text from txt file to combined_text\n",
+    "#                     combined_text.append(content)\n",
+    "#             except Exception as e:\n",
+    "#                 print(f\"Error reading {filename}: {e}\")\n",
     "    \n",
-    "    return \"\\n\".join(combined_text)\n"
+    "#     return \"\\n\".join(combined_text)\n"
    ]
   },
   {
@@ -1077,7 +1187,140 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: Read in relevant context files \n",
+    "## Passing Images to LLM (Claude)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: anthropic in ./.venv/lib/python3.12/site-packages (0.37.1)\n",
+      "Requirement already satisfied: IPython in ./.venv/lib/python3.12/site-packages (8.29.0)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in ./.venv/lib/python3.12/site-packages (from anthropic) (4.6.2.post1)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in ./.venv/lib/python3.12/site-packages (from anthropic) (1.9.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in ./.venv/lib/python3.12/site-packages (from anthropic) (0.27.2)\n",
+      "Requirement already satisfied: jiter<1,>=0.4.0 in ./.venv/lib/python3.12/site-packages (from anthropic) (0.7.0)\n",
+      "Requirement already satisfied: pydantic<3,>=1.9.0 in ./.venv/lib/python3.12/site-packages (from anthropic) (2.9.2)\n",
+      "Requirement already satisfied: sniffio in ./.venv/lib/python3.12/site-packages (from anthropic) (1.3.1)\n",
+      "Requirement already satisfied: tokenizers>=0.13.0 in ./.venv/lib/python3.12/site-packages (from anthropic) (0.20.1)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.7 in ./.venv/lib/python3.12/site-packages (from anthropic) (4.12.2)\n",
+      "Requirement already satisfied: decorator in ./.venv/lib/python3.12/site-packages (from IPython) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in ./.venv/lib/python3.12/site-packages (from IPython) (0.19.1)\n",
+      "Requirement already satisfied: matplotlib-inline in ./.venv/lib/python3.12/site-packages (from IPython) (0.1.7)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in ./.venv/lib/python3.12/site-packages (from IPython) (3.0.48)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in ./.venv/lib/python3.12/site-packages (from IPython) (2.18.0)\n",
+      "Requirement already satisfied: stack-data in ./.venv/lib/python3.12/site-packages (from IPython) (0.6.3)\n",
+      "Requirement already satisfied: traitlets>=5.13.0 in ./.venv/lib/python3.12/site-packages (from IPython) (5.14.3)\n",
+      "Requirement already satisfied: pexpect>4.3 in ./.venv/lib/python3.12/site-packages (from IPython) (4.9.0)\n",
+      "Requirement already satisfied: idna>=2.8 in ./.venv/lib/python3.12/site-packages (from anyio<5,>=3.5.0->anthropic) (3.10)\n",
+      "Requirement already satisfied: certifi in ./.venv/lib/python3.12/site-packages (from httpx<1,>=0.23.0->anthropic) (2024.8.30)\n",
+      "Requirement already satisfied: httpcore==1.* in ./.venv/lib/python3.12/site-packages (from httpx<1,>=0.23.0->anthropic) (1.0.6)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in ./.venv/lib/python3.12/site-packages (from httpcore==1.*->httpx<1,>=0.23.0->anthropic) (0.14.0)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.3 in ./.venv/lib/python3.12/site-packages (from jedi>=0.16->IPython) (0.8.4)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in ./.venv/lib/python3.12/site-packages (from pexpect>4.3->IPython) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in ./.venv/lib/python3.12/site-packages (from prompt-toolkit<3.1.0,>=3.0.41->IPython) (0.2.13)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in ./.venv/lib/python3.12/site-packages (from pydantic<3,>=1.9.0->anthropic) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.23.4 in ./.venv/lib/python3.12/site-packages (from pydantic<3,>=1.9.0->anthropic) (2.23.4)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.16.4 in ./.venv/lib/python3.12/site-packages (from tokenizers>=0.13.0->anthropic) (0.26.2)\n",
+      "Requirement already satisfied: executing>=1.2.0 in ./.venv/lib/python3.12/site-packages (from stack-data->IPython) (2.1.0)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in ./.venv/lib/python3.12/site-packages (from stack-data->IPython) (2.4.1)\n",
+      "Requirement already satisfied: pure-eval in ./.venv/lib/python3.12/site-packages (from stack-data->IPython) (0.2.3)\n",
+      "Requirement already satisfied: six>=1.12.0 in ./.venv/lib/python3.12/site-packages (from asttokens>=2.1.0->stack-data->IPython) (1.16.0)\n",
+      "Requirement already satisfied: filelock in ./.venv/lib/python3.12/site-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers>=0.13.0->anthropic) (3.16.1)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in ./.venv/lib/python3.12/site-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers>=0.13.0->anthropic) (2024.10.0)\n",
+      "Requirement already satisfied: packaging>=20.9 in ./.venv/lib/python3.12/site-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers>=0.13.0->anthropic) (24.1)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in ./.venv/lib/python3.12/site-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers>=0.13.0->anthropic) (6.0.2)\n",
+      "Requirement already satisfied: requests in ./.venv/lib/python3.12/site-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers>=0.13.0->anthropic) (2.32.3)\n",
+      "Requirement already satisfied: tqdm>=4.42.1 in ./.venv/lib/python3.12/site-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers>=0.13.0->anthropic) (4.66.6)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in ./.venv/lib/python3.12/site-packages (from requests->huggingface-hub<1.0,>=0.16.4->tokenizers>=0.13.0->anthropic) (3.4.0)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in ./.venv/lib/python3.12/site-packages (from requests->huggingface-hub<1.0,>=0.16.4->tokenizers>=0.13.0->anthropic) (2.2.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ensure you have installed IPython\n",
+    "#%pip install anthropic IPython\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import packages\n",
+    "from IPython.display import Image\n",
+    "import base64\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set up claude instance\n",
+    "client = Anthropic()\n",
+    "MODEL_NAME = \"claude-3-opus-20240229\"\n",
+    "\n",
+    "#function to decode base64 encoded image\n",
+    "def get_base64_encoded_image(image_path):\n",
+    "    with open(image_path, \"rb\") as image_file:\n",
+    "        binary_data = image_file.read()\n",
+    "        base_64_encoded_data = base64.b64encode(binary_data)\n",
+    "        base64_string = base_64_encoded_data.decode('utf-8')\n",
+    "        return base64_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set path to image\n",
+    "image_path=''\n",
+    "\n",
+    "#set message and prompt to Claude API\n",
+    "message_list = [\n",
+    "    {\n",
+    "        \"role\": 'user',\n",
+    "        \"content\": [\n",
+    "            {\"type\": \"image\", \"source\": {\"type\": \"base64\", \"media_type\": \"image/jpeg\", \"data\": get_base64_encoded_image(image_path)}},\n",
+    "            {\"type\": \"text\", \"text\": \"Explain the diagram\"}\n",
+    "        ]\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# generate response\n",
+    "response = client.messages.create(\n",
+    "    model=MODEL_NAME,\n",
+    "    max_tokens=2048,\n",
+    "    messages=message_list\n",
+    ")\n",
+    "\n",
+    "#print the text of claude's response\n",
+    "print(response.content[0].text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO: Read in relevant context files \n",
     "- IG_golden_rules\n",
     "- IG_example\n",
     "- IG_profile"
@@ -1093,7 +1336,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1107,7 +1350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
