--- a/HTML_extractor.ipynb
+++ b/HTML_extractor.ipynb
@@ -11,20 +11,296 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook extracts elements from HTML files and writes the contents into markdown files. It uses BeautifulSoup to parse the HTML and extract the desired including text, tables, and list elements as well as includes image placeholders. The markdowns are created so that narrative content within the IG can be preserved and concatanated to serve as context for the LLMs. The content is saved in a single markdown file for a specific HTML file. "
+    "This notebook explores extracting narrative elements from HTML files using multiple methods incuding LangChain's `AsyncHtmlLoader` to convert URLs to to Markdown, LangChain's `UnstructuredHTMLLoader` and `BSHTMLLoader` methods to convert HTML from local folders, as well as a custom content extractor method `ContextExtractor` using BeautifulSoup to parse HTMLMTL content and extract specific elements."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/amathur/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n",
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    }
+   ],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import os\n",
     "from pathlib import Path\n",
     "from IPython.display import display, HTML\n",
-    "from bs4.element import Tag"
+    "from bs4.element import Tag\n",
+    "from langchain_community.document_loaders import AsyncHtmlLoader\n",
+    "from langchain_community.document_loaders import BSHTMLLoader\n",
+    "from langchain_community.document_loaders import UnstructuredHTMLLoader\n",
+    "from langchain_community.document_transformers import MarkdownifyTransformer\n",
+    "from urllib.parse import urlparse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Langchain tool (Markdownify) to convert HTML to Markdown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a directory to store Markdown files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Directory where you want to save the markdown files\n",
+    "output_dir = 'PlanNet/site/markdown'\n",
+    "# Create output directory if it doesn't exist\n",
+    "Path(output_dir).mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Install necessary libraries if not already installed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %pip install --upgrade --quiet  markdownify\n",
+    "# %pip install -U lxml\n",
+    "# %pip install unstructured"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_filename_from_url(url):\n",
+    "    \"\"\"Extract filename from URL and convert to markdown filename.\"\"\"\n",
+    "    # Parse the URL and get the path\n",
+    "    path = urlparse(url).path\n",
+    "    \n",
+    "    # Get the last part of the path (filename)\n",
+    "    filename = path.split('/')[-1]\n",
+    "    \n",
+    "    # Remove .html extension if present\n",
+    "    filename = filename.replace('.html', '')\n",
+    "    \n",
+    "    # Convert to title case and replace special characters\n",
+    "    filename = filename.replace('-', '_')\n",
+    "    \n",
+    "    # Add .md extension\n",
+    "    return f\"{filename}.md\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_urls_to_markdown(urls):\n",
+    "    \"\"\"Convert multiple URLs to markdown files.\"\"\"\n",
+    "    # Initialize loaders and transformers\n",
+    "    loader = AsyncHtmlLoader(urls)\n",
+    "    md_transformer = MarkdownifyTransformer()\n",
+    "    \n",
+    "    # Load all documents\n",
+    "    docs = loader.load()\n",
+    "    converted_docs = md_transformer.transform_documents(docs)\n",
+    "    \n",
+    "    # Create output directory if it doesn't exist\n",
+    "    output_dir = \"PlanNet/site/markdown\"\n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "    \n",
+    "    # Process each document\n",
+    "    for url, doc in zip(urls, converted_docs):\n",
+    "        # Generate filename from URL\n",
+    "        filename = get_filename_from_url(url)\n",
+    "        \n",
+    "        # Create full file path\n",
+    "        file_path = os.path.join(output_dir, filename)\n",
+    "        \n",
+    "        # Write content to file\n",
+    "        with open(file_path, 'w', encoding='utf-8') as f:\n",
+    "            f.write(doc.page_content)\n",
+    "        \n",
+    "        print(f\"Created: {filename}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urls = [\n",
+    "    \"https://hl7.org/fhir/us/davinci-pdex-plan-net/index.html\",\n",
+    "    \"https://hl7.org/fhir/us/davinci-pdex-plan-net/ChangeHistory.html\",\n",
+    "    \"https://hl7.org/fhir/us/davinci-pdex-plan-net/examples.html\",\n",
+    "    \"https://hl7.org/fhir/us/davinci-pdex-plan-net/implementation.html\",\n",
+    "    \"https://hl7.org/fhir/us/davinci-pdex-plan-net/profiles.html\",\n",
+    "    \"https://hl7.org/fhir/us/davinci-pdex-plan-net/artifacts.html\",\n",
+    "    \"https://hl7.org/fhir/us/davinci-pdex-plan-net/CapabilityStatement-plan-net.html\"\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching pages: 100%|##########| 7/7 [00:00<00:00,  8.63it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created: index.md\n",
+      "Created: ChangeHistory.md\n",
+      "Created: examples.md\n",
+      "Created: implementation.md\n",
+      "Created: profiles.md\n",
+      "Created: artifacts.md\n",
+      "Created: CapabilityStatement_plan_net.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "convert_urls_to_markdown(urls)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Files should be stored in the `PlanNet/site/markdown` folder."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experimental coverters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Converting from local HTML files to Markdown\n",
+    "\n",
+    "WIP: While this function works, it's not perfect. It's not preserving the structure of the HTML well. Would reccomend using the langchain tool above instead. I've tried using two document loader functions `BSHTMLLoader` as well as `UnstructuredHTMLLoader` but neither seem to work well at this point."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_filename_from_html(html_file):\n",
+    "    \"\"\"Convert HTML filename to markdown filename.\"\"\"\n",
+    "    # Get the base filename without extension\n",
+    "    base_name = os.path.splitext(os.path.basename(html_file))[0]\n",
+    "    \n",
+    "    # Convert to title case and replace special characters\n",
+    "    filename = base_name.replace('-', '_')\n",
+    "    \n",
+    "    # Add .md extension\n",
+    "    return f\"{filename}.md\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_html_to_markdown(html_files):\n",
+    "    \"\"\"Convert multiple local HTML files to markdown files.\"\"\"\n",
+    "    # Create output directory if it doesn't exist\n",
+    "    output_dir = \"PlanNet/site/markdown\" #NOTE: This is the same directory as the url to markdown converter above. Change to keep the results seprate. \n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "    \n",
+    "    # Process each HTML file\n",
+    "    for html_file in html_files:\n",
+    "        try:\n",
+    "            # Load and convert the HTML file\n",
+    "            loader = UnstructuredHTMLLoader(html_file)\n",
+    "            doc = loader.load()[0]  # BSHTMLLoader returns a list\n",
+    "            \n",
+    "            # Transform to markdown\n",
+    "            md_transformer = MarkdownifyTransformer()\n",
+    "            converted_doc = md_transformer.transform_documents([doc])[0]\n",
+    "            \n",
+    "            # Generate output filename\n",
+    "            output_filename = get_filename_from_html(html_file)\n",
+    "            output_path = os.path.join(output_dir, output_filename)\n",
+    "            \n",
+    "            # Write content to file\n",
+    "            with open(output_path, 'w', encoding='utf-8') as f:\n",
+    "                f.write(converted_doc.page_content)\n",
+    "            \n",
+    "            print(f\"Successfully converted {html_file} to {output_filename}\")\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"Error processing {html_file}: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html_files = [\n",
+    "    \"PlanNet/site/CapabilityStatement-plan-net.html\",\n",
+    "    \"PlanNet/site/ChangeHistory.html\",\n",
+    "    \"PlanNet/site/index.html\",\n",
+    "    \"PlanNet/site/examples.html\",\n",
+    "    \"PlanNet/site/implementation.html\",\n",
+    "    \"PlanNet/site/profiles.html\",\n",
+    "    \"PlanNet/site/artifacts.html\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convert_html_to_markdown(html_files)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Custom Content Extractor"
    ]
   },
   {
@@ -36,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,78 +552,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Example Use of Custom Content Extractor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "`ContentExtractor` is called by creating an instance of the class and then calling the `process_html_file` or `process_directory` method. The `process_html_file` method takes two arguments: the path to the input HTML file and the desired name of the output Markdown file. The `process_directory` method takes two arguments: the path to the input directory containing HTML files and the path to the output directory where the Markdown files will be saved."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px; margin: 10px 0;\">\n",
-       "            <p><strong>Processed file:</strong> index.html</p>\n",
-       "            <p><strong>Output saved to:</strong> context.md</p>\n",
-       "            <p><strong>Extracted elements:</strong> 65</p>\n",
-       "        </div>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "extractor = ContextExtractor()\n",
     "context = extractor.process_html_file(\n",
-    "    input_file='/Users/amathur/Documents/ONCLAIVE/onclaive-aanchalwip/PlanNet/site/index.html',\n",
+    "    input_file='PlanNet/site/index.html',\n",
     "    output_file='context'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Element 1:\n",
-      "\n",
-      "## Home\n",
-      "\n",
-      "\n",
-      "Element 2:\n",
-      "| Official URL:http://hl7.org/fhir/us/davinci-pdex-plan-net/ImplementationGuide/hl7.fhir.us.davinci-pdex-plan-net | Version:1.1.0 |\n",
-      "| --- | --- |\n",
-      "| Active\n",
-      "          \n",
-      "            as of 2022-04-04 | Com...\n",
-      "\n",
-      "Element 3:\n",
-      "\n",
-      "\n",
-      "Element 4:\n",
-      "\n",
-      "### PDEX Payer Network Implementation Guide\n",
-      "\n",
-      "\n",
-      "Element 5:\n",
-      "\n",
-      "#### Introduction\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i, element in enumerate(context[:5]):  # Show first 5 elements\n",
     "    print(f\"\\nElement {i+1}:\")\n",
@@ -356,10 +588,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Directory containing your HTML files\n",
+    "input_dir = 'PlanNet/site'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Process all HTML files in the input directory\n",
+    "for html_file in Path(input_dir).glob('**/*.html'):\n",
+    "    # Create corresponding output path while preserving directory structure\n",
+    "    relative_path = html_file.relative_to(input_dir)\n",
+    "    output_path = Path(output_dir) / relative_path.with_suffix('.md')\n",
+    "    \n",
+    "    # Create necessary subdirectories\n",
+    "    output_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "    \n",
+    "    # Process the file\n",
+    "    context = extractor.process_html_file(\n",
+    "        input_file=str(html_file),\n",
+    "        output_file=str(output_path)\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
