Folder containing results from meta-summarization experiments

--- a/prompt_chaining_v2.ipynb
+++ b/prompt_chaining_v2.ipynb
@@ -1147,10 +1147,10 @@
    ],
    "source": [
     "# Save results\n",
-    "output_dir = 'processed_output'\n",
+    "output_dir = 'summarized_output'\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
-    "with open(os.path.join(output_dir, 'final_technical_analysis.md'), 'w') as f:\n",
+    "with open(os.path.join(output_dir, 'technical_analysis_summary.md'), 'w') as f:\n",
     "    f.write(final_analysis)\n",
     "\n",
     "print(f\"Processing complete. Results saved to {output_dir}\")\n"
