Updating meta summary script

--- a/meta-summarization.ipynb
+++ b/meta-summarization.ipynb
@@ -9,9 +9,12 @@
     "\n",
     "The current approach takes in all JSON files from the Plan Net IG, all figure diagrams, and key narrative information in markdown form (formerly extracted from HTML files). The script then summarizes each type of information in batches, and creates a meta-summarization of all documents to outline the technical information it can glean from all submitted documentation. The goal is to identify if this approach can produce all technical information at an appropriate level of deatil that an LLM would need to know to help design a test kit for a given IG. Best practices from the Claude API were used.\n",
     "\n",
-    "Current status: We were able to run through the script fully one time using the Claude API with all JSONs, markdown content, and images. The process took over 93 minutes. The summarization is saved in the file final_technical_analysis.md and is pasted at the end of this script. We can see that the first iteration did not produce detailed enough information about requirements, etc. \n",
+    "First attempts: We were able to run through the script fully using the Claude API with all JSONs, markdown content, and images. The process took over 93 minutes. The meta summary is saved in the file final_technical_analysis.md and is pasted at the end of this script. We can see that the first iteration did not produce detailed enough information about requirements, etc. \n",
     "\n",
-    "Need to do: Further work is needed to edit the prompts to require that that level of detail is kept in the outputs of each summarization step. In addition, this process will have to be configured for the Gemini and GPT APIs as well for comparison. We will also still need to revise this work to allow for additional prompting for confirming understanding of an IG, for test kit development, and for documents to be included, such as a 'golden rules' document.\n"
+    "In progress: \n",
+    "- Doing a full run for Gemini and GPT, and instead of outputting summaries of the content, using this meta summarization process to produce list of test requirements, revising the prompting based on Inferno requirements extraction process documentation. \n",
+    "- Reviewing LangChain iterative refinement capabilities to improve summary quality\n",
+    "\n"
    ]
   },
   {
