Update meta-summarization script

--- a/meta-summarization.ipynb
+++ b/meta-summarization.ipynb
@@ -457,7 +457,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_requirements_extraction_prompt(content: Union[str, dict, list]) -> str:\n",
+    "    \"\"\"Create a prompt that aligns with Inferno's requirements extraction process\"\"\"\n",
+    "    \n",
+    "    return f\"\"\"Analyze this FHIR Implementation Guide content to extract precise requirements following these guidelines:\n",
+    "\n",
+    "For each requirement you identify, provide:\n",
+    "\n",
+    "1. REQUIREMENT TEXT\n",
+    "- Extract direct quotes from the source\n",
+    "- For compound requirements, split into atomic requirements\n",
+    "- Maintain context when splitting\n",
+    "- Use [...] for added clarifications\n",
+    "- Use ... for removed text\n",
+    "- Format using markdown syntax for code blocks, italics, etc.\n",
+    "\n",
+    "2. REQUIREMENT METADATA\n",
+    "- Conformance Level (SHALL, SHOULD, MAY, SHOULD NOT, SHALL NOT)\n",
+    "- Actor(s) the requirement applies to\n",
+    "- Whether the requirement is conditional (True/False)\n",
+    "- Any sub-requirements or referenced requirements\n",
+    "\n",
+    "3. SOURCE TRACEABILITY\n",
+    "- Note the specific section or location this requirement comes from\n",
+    "- For JSON content, note the specific resource type and element\n",
+    "\n",
+    "When analyzing content, focus on:\n",
+    "\n",
+    "a) Making requirements atomic and testable\n",
+    "b) Maintaining the original text while adding necessary context\n",
+    "c) Identifying implicit requirements for each actor\n",
+    "d) Distinguishing between conjunctive (\"and\") and disjunctive (\"or\") requirements\n",
+    "e) Capturing terminology bindings and must-support elements\n",
+    "f) Noting RESTful API conformance requirements\n",
+    "g) Identifying conditional requirements\n",
+    "\n",
+    "Content to analyze:\n",
+    "{json.dumps(content, indent=2) if isinstance(content, (dict, list)) else content}\n",
+    "\n",
+    "Format each requirement as:\n",
+    "```\n",
+    "Requirement Text: <quoted text with [...] for clarifications and ... for elisions>\n",
+    "Conformance: <conformance level>\n",
+    "Actor: <actor name(s)>\n",
+    "Conditional: <True/False>\n",
+    "Sub-Requirements: <list of referenced requirements if any>\n",
+    "Source: <specific location in documentation>\n",
+    "```\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_llm_requirements_output(output: str) -> List[Dict]:\n",
+    "    \"\"\"Process LLM output into standardized requirements format\"\"\"\n",
+    "    requirements = []\n",
+    "    current_req = {}\n",
+    "    \n",
+    "    # Split output into individual requirements\n",
+    "    req_blocks = output.split('\\n\\n')\n",
+    "    \n",
+    "    for block in req_blocks:\n",
+    "        if block.strip().startswith('Requirement Text:'):\n",
+    "            # Save previous requirement if it exists\n",
+    "            if current_req:\n",
+    "                requirements.append(current_req)\n",
+    "                current_req = {}\n",
+    "            \n",
+    "            # Parse new requirement\n",
+    "            lines = block.strip().split('\\n')\n",
+    "            for line in lines:\n",
+    "                if ': ' in line:\n",
+    "                    key, value = line.split(': ', 1)\n",
+    "                    key = key.lower().replace(' ', '_')\n",
+    "                    current_req[key] = value.strip()\n",
+    "    \n",
+    "    # Add final requirement\n",
+    "    if current_req:\n",
+    "        requirements.append(current_req)\n",
+    "        \n",
+    "    return requirements\n",
+    "\n",
+    "def save_requirements_to_csv(requirements: List[Dict], output_file: str):\n",
+    "    \"\"\"Save extracted requirements to CSV format matching Inferno's structure\"\"\"\n",
+    "    df = pd.DataFrame(requirements)\n",
+    "    \n",
+    "    # Rename columns to match Inferno's format\n",
+    "    column_mapping = {\n",
+    "        'requirement_text': 'Requirement',\n",
+    "        'conformance': 'Conformance',\n",
+    "        'actor': 'Actor',\n",
+    "        'conditional': 'Conditionality',\n",
+    "        'source': 'URL',\n",
+    "        'sub_requirements': 'Sub-Requirement(s)'\n",
+    "    }\n",
+    "    \n",
+    "    df = df.rename(columns=column_mapping)\n",
+    "    \n",
+    "    # Add required columns if missing\n",
+    "    required_columns = ['Req Set', 'Id'] + list(column_mapping.values())\n",
+    "    for col in required_columns:\n",
+    "        if col not in df.columns:\n",
+    "            df[col] = ''\n",
+    "            \n",
+    "    # Generate sequential IDs if not present\n",
+    "    if 'Id' in df.columns and df['Id'].isna().all():\n",
+    "        df['Id'] = range(1, len(df) + 1)\n",
+    "        \n",
+    "    df.to_csv(output_file, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,14 +646,11 @@
     "        logging.error(f\"Error setting up clients: {str(e)}\")\n",
     "        raise\n",
     "\n",
-    "def process_all_content(api_type: str, base_directory: str) -> Dict[str, str]:\n",
-    "    \"\"\"Process all content and generate test requirements\"\"\"\n",
-    "    # Initialize API clients and rate limiter\n",
+    "def process_all_content(api_type: str, base_directory: str) -> Dict[str, Any]:\n",
+    "    \"\"\"Process all content and generate requirements in Inferno format\"\"\"\n",
     "    clients = setup_clients()\n",
     "    client = clients[api_type]\n",
     "    config = API_CONFIGS[api_type]\n",
-    "    \n",
-    "    # Create single rate limiter instance for this API type\n",
     "    rate_limiter = create_rate_limiter()\n",
     "    \n",
     "    def check_limits():\n",
@@ -536,16 +659,21 @@
     "    try:\n",
     "        # Process JSON files\n",
     "        json_files = copy_json_files()\n",
-    "        json_summaries = []\n",
+    "        all_requirements = []\n",
+    "        \n",
     "        for json_file in json_files:\n",
-    "            json_data = prepare_json_for_processing(os.path.join(base_directory, 'json_only', json_file))\n",
+    "            json_data = prepare_json_for_processing(\n",
+    "                os.path.join(base_directory, 'json_only', json_file)\n",
+    "            )\n",
     "            chunks = split_json(json_data)\n",
-    "            chunk_summaries = process_content_batch(api_type, chunks, config, client, check_limits)\n",
-    "            json_summaries.extend(chunk_summaries)\n",
-    "            time.sleep(config[\"delay_between_batches\"])\n",
-    "\n",
-    "        # Process markdown files if present\n",
-    "        markdown_summaries = []\n",
+    "            \n",
+    "            for chunk in chunks:\n",
+    "                response = make_api_request(client, api_type, chunk, check_limits)\n",
+    "                chunk_requirements = process_llm_requirements_output(response)\n",
+    "                all_requirements.extend(chunk_requirements)\n",
+    "                time.sleep(config[\"delay_between_chunks\"])\n",
+    "                \n",
+    "        # Process markdown files\n",
     "        markdown_dir = os.path.join(base_directory, 'markdown')\n",
     "        if os.path.exists(markdown_dir):\n",
     "            for md_file in os.listdir(markdown_dir):\n",
@@ -553,77 +681,47 @@
     "                    with open(os.path.join(markdown_dir, md_file), 'r') as f:\n",
     "                        content = clean_markdown(f.read())\n",
     "                    chunks = split_markdown(content)\n",
-    "                    chunk_summaries = process_content_batch(api_type, chunks, config, client, check_limits)\n",
-    "                    markdown_summaries.extend(chunk_summaries)\n",
-    "                    time.sleep(config[\"delay_between_batches\"])\n",
-    "\n",
-    "        # Generate final test requirements\n",
-    "        content_summaries = {\n",
-    "            \"json\": json_summaries,\n",
-    "            \"markdown\": markdown_summaries\n",
-    "        }\n",
+    "                    \n",
+    "                    for chunk in chunks:\n",
+    "                        response = make_api_request(client, api_type, chunk, check_limits)\n",
+    "                        chunk_requirements = process_llm_requirements_output(response)\n",
+    "                        all_requirements.extend(chunk_requirements)\n",
+    "                        time.sleep(config[\"delay_between_chunks\"])\n",
     "        \n",
-    "        prompt = create_test_requirements_prompt(content_summaries)\n",
-    "        test_requirements = make_api_request(client, api_type, prompt, check_limits)\n",
+    "        # Save requirements to CSV\n",
+    "        output_file = f\"requirements_{api_type}_extracted.csv\"\n",
+    "        save_requirements_to_csv(all_requirements, output_file)\n",
     "        \n",
     "        return {\n",
-    "            \"json_summaries\": json_summaries,\n",
-    "            \"markdown_summaries\": markdown_summaries,\n",
-    "            \"test_requirements\": test_requirements\n",
+    "            \"requirements\": all_requirements,\n",
+    "            \"output_file\": output_file\n",
     "        }\n",
     "        \n",
     "    except Exception as e:\n",
     "        logging.error(f\"Error processing content: {str(e)}\")\n",
-    "        raise\n"
+    "        raise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def format_content_for_api(content: Union[str, dict, list], api_type: str) -> str:\n",
-    "    \"\"\"Format content appropriately for each API\"\"\"\n",
-    "    if isinstance(content, (dict, list)):\n",
-    "        # For JSON content\n",
-    "        formatted_content = [\n",
-    "            {\n",
-    "                \"type\": \"text\",\n",
-    "                \"text\": f\"\"\"Please analyze this FHIR Implementation Guide content:\n",
-    "\n",
-    "Content Type: JSON\n",
-    "{json.dumps(content, indent=2)}\n",
-    "\n",
-    "Analyze this content focusing on extracting testable requirements, including:\n",
-    "- Resource definitions and constraints  \n",
-    "- Must Support elements\n",
-    "- Cardinality rules\n",
-    "- Terminology bindings\n",
-    "- Search parameters\n",
-    "- Business rules\"\"\"\n",
-    "            }\n",
-    "        ]\n",
-    "    else:\n",
-    "        # For text/markdown content\n",
-    "        formatted_content = [\n",
-    "            {\n",
-    "                \"type\": \"text\", \n",
-    "                \"text\": f\"\"\"Please analyze this FHIR Implementation Guide content:\n",
-    "\n",
-    "Content Type: Documentation\n",
-    "{content}\n",
-    "\n",
-    "Analyze this content focusing on extracting testable requirements.\"\"\"\n",
-    "            }\n",
-    "        ]\n",
+    "    \"\"\"Format content appropriately for each API using Inferno's requirements structure\"\"\"\n",
     "    \n",
-    "    # For Claude API, return array of content objects\n",
+    "    # Create the base requirements extraction prompt\n",
+    "    base_prompt = create_requirements_extraction_prompt(content)\n",
+    "    \n",
     "    if api_type == \"claude\":\n",
-    "        return formatted_content\n",
-    "        \n",
+    "        return [{\n",
+    "            \"type\": \"text\",\n",
+    "            \"text\": base_prompt\n",
+    "        }]\n",
+    "    \n",
     "    # For other APIs, return just the text\n",
-    "    return formatted_content[0][\"text\"]"
+    "    return base_prompt"
    ]
   },
   {
@@ -644,6 +742,23 @@
      "text": [
       "INFO:root:Processing with claude...\n",
       "INFO:root:Copied 166 JSON files to full-ig/json_only\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
       "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
       "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
       "INFO:httpx:HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
