adding gpt requirements extraction script and output

--- a/reqs_extraction/gemini-meta-summarization-v1.ipynb
+++ b/reqs_extraction/gemini-meta-summarization-v1.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Meta-Summarization of IG Documents: Requirements Extraction\n",
+    "## Gemini Requirements Extraction\n",
     "This script aims to develop a structure to send large amounts of text/content to LLM APIs through multiple calls. The current approach takes in all JSON files from the Plan Net IG and key narrative information in markdown form (formerly extracted from HTML files). The script then analyzes each type of information in batches, and creates a meta-list of all requirements extracted from those documents. The goal is to identify if this approach can produce all technical information at an appropriate level of deatil that an LLM would need to know to help design a test kit for a given IG.\n",
     "\n",
-    "First attempts: We were able to run through the script fully using the Claude API with all JSONs and markdown content. The process took over 93 minutes. The output requirements list is saved in the file (processed_output/test_requirements_claude1.json). \n",
+    "First attempts: We were able to run through the script fully using the Gemini API with all JSONs and markdown content. The process took over 93 minutes. The output requirements list is saved in the files (processed_output/test_requirements_gemini1.json and .csv). \n",
     "\n",
     "In progress: \n",
     "- Adding images back in, revising the prompting based on Inferno requirements extraction process documentation\n",
@@ -84,8 +84,7 @@
     "SYSTEM_PROMPTS = {\n",
     "    \"gemini\": \"\"\"Analyze FHIR Implementation Guide content to identify \n",
     "                 testable requirements as a Healthcare Integration Test Engineer.\"\"\"\n",
-    "}\n",
-    "\n"
+    "}"
    ]
   },
   {
@@ -478,22 +477,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_test_requirements_prompt(content_summaries: Dict[str, List[str]]) -> str:\n",
-    "    \"\"\"Create prompt for generating test requirements\"\"\"\n",
-    "    return f\"\"\"Synthesize these content summaries into comprehensive test requirements:\n",
-    "\n",
-    "    {json.dumps(content_summaries, indent=2)}\n",
-    "\n",
-    "    Extract specific requirements for:\n",
-    "    1. Resource Profiles and Must Support Elements\n",
-    "    2. Search Parameters and Operations\n",
-    "    3. RESTful API Conformance\n",
-    "    4. Value Sets and Terminology\n",
-    "    5. Business Rules and Constraints\n",
-    "    6. Security and Authorization\n",
-    "\n",
-    "    Focus on precise, testable criteria.\"\"\"\n",
-    "\n",
     "def setup_clients():\n",
     "    \"\"\"Initialize clients for each LLM service\"\"\"\n",
     "    try: \n",
@@ -571,7 +554,8 @@
     "                        time.sleep(config[\"delay_between_chunks\"])\n",
     "        \n",
     "        # Save requirements to CSV\n",
-    "        output_file = f\"requirements_{api_type}_extracted.csv\"\n",
+    "        output_directory = 'processed_output'\n",
+    "        output_file = os.path.join(output_directory, f\"test_requirements_{api_type}.json\")\n",
     "        save_requirements_to_csv(all_requirements, output_file)\n",
     "        \n",
     "        return {\n",
